# crabinfer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-metallibs.sh  build.sh
crabinfer-core/: Cargo.toml  build.rs
crabinfer-core/examples/: mac-cli.rs
crabinfer-core/src/: crabinfer.udl  device.rs  engine.rs  lib.rs  memory.rs
crabinfer-swift/: Package.swift
crabinfer-swift/Sources/CrabInfer/: CrabInfer.swift
examples/ios-demo/CrabInferDemo/: ChatView.swift  ContentView.swift  CrabInferDemoApp.swift  DeviceInfoBar.swift  InferenceThread.swift  InferenceViewModel.swift  MessageBubble.swift  ModelLoaderSheet.swift
examples/ios-demo/CrabInferDemo.xcodeproj/: project.pbxproj
examples/ios-demo/CrabInferDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
